force-app/main/default/objects/Contact/fields/AccepteLesSuppl__c.field-meta.xml
<CustomField>
    <fullName>AccepteLesSuppl__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ce champs a été créé dans le cadre du déploiement de Activ Medical Lab Belgique</description>
    <label>Accepte les suppléments ?</label>
    <type>Checkbox</type>
</CustomField>