force-app/main/default/objects/Contact/fields/CA_consolide__c.field-meta.xml
<CustomField>
    <fullName>CA_consolide__c</fullName>
    <formula>HYPERLINK( 

&quot;/lightning/r/Report/00O1t000008g159EAA/view?&amp;fv0=&quot; &amp; 

Id, 

$Label.Afficher 
, 
&quot;_new&quot; 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA consolidé</label>
    <type>Text</type>
</CustomField>