force-app/main/default/objects/Contact/fields/Email_3_incorrect__c.field-meta.xml
<CustomField>
    <fullName>Email_3_incorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email rejeté par le serveur de messagerie</description>
    <inlineHelpText>Email rejeté par le serveur de messagerie</inlineHelpText>
    <label>Email 3 incorrect</label>
    <type>Checkbox</type>
</CustomField>