force-app/main/default/objects/Contact/fields/Email_principal_incorrect__c.field-meta.xml
<CustomField>
    <fullName>Email_principal_incorrect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Email rejeté par le serveur de messagerie</description>
    <inlineHelpText>Email rejeté par le serveur de messagerie</inlineHelpText>
    <label>Email principal incorrect</label>
    <type>Checkbox</type>
</CustomField>