force-app/main/default/objects/Contact/fields/Exerce_seul_dans_un_cabinet_medical__c.field-meta.xml
<CustomField>
    <fullName>Exerce_seul_dans_un_cabinet_medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exerce seul dans un cabinet médical</label>
    <type>Checkbox</type>
</CustomField>