force-app/main/default/objects/Contact/fields/Icone_source__c.field-meta.xml
<CustomField>
    <fullName>Icone_source__c</fullName>
    <formula>IF 
( ISPICKVAL( Source_de_contact__c,&quot;RPPS&quot;) 
, 
IMAGE(&quot;/resource/1551199623000/ICONS_CONTACT_RPPS&quot;, &quot;RPPS&quot;, 40 ,65 ) 
, 
IF 
( ISPICKVAL( Source_de_contact__c,&quot;Site Internet&quot;) 
, 
IMAGE(&quot;/resource/1551199653000/ICONS_CONTACT_Internet&quot;, &quot;Site Internet&quot;, 40 ,40 ) 
, 
IF 
( ISPICKVAL( Source_de_contact__c,&quot;Appel entrant&quot;) 
, 
IMAGE(&quot;/resource/1551199676000/ICONS_CONTACT_Appel&quot;, &quot;Appel entrant&quot;, 40 ,40 ) 
, 
IF 
( ISPICKVAL( Source_de_contact__c,&quot;Evenements Cerba HealthCare&quot;) 
, 
IMAGE(&quot;/resource/1551199709000/ICONS_CONTACT_Event_Cerba&quot;, &quot;Evénements Cerba HealthCare&quot;, 40 ,40 ) 
, 
IF 
( ISPICKVAL( Source_de_contact__c,&quot;Congres salons&quot;) 
, 
IMAGE(&quot;/resource/1551199754000/ICONS_CONTACT_Salons_Congres&quot;, &quot;Congrès salons&quot;, 40 ,40 ) 
, 
IF 
( ISPICKVAL( Source_de_contact__c,&quot;SGLs&quot;) 
, 
IMAGE(&quot;/resource/1551199779000/ICONS_CONTACT_SGL&quot;, &quot;SGLs&quot;, 40 ,80 ) 
, 
IF 
( 
ISPICKVAL(Source_de_contact__c, &quot;LinkedIn&quot;) 
, 
IMAGE(&quot;/resource/1551199806000/ICONS_CONTACT_Linkedin&quot;, &quot;LinkedIn&quot;, 40 ,40) 
, 
IF 
( 
ISPICKVAL(Source_de_contact__c, &quot;Prospection personnelle&quot;) 
, 
IMAGE(&quot;/resource/1551199829000/ICONS_CONTACT_Prospection&quot;, &quot;Prospection personnelle&quot;, 40, 40) 
, 
IF 
(Source_de_donnees__c =&#39;RPPS&#39;
, 
IMAGE(&quot;/resource/1551199623000/ICONS_CONTACT_RPPS&quot;, &quot;RPPS&quot;, 40 ,65 ) 
,
&quot;&quot; 
) 
) 
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icône source</label>
    <type>Text</type>
</CustomField>