force-app/main/default/objects/Contact/fields/ID_externe__c.field-meta.xml
<CustomField>
    <fullName>ID_externe__c</fullName>
    <externalId>true</externalId>
    <label>ID externe</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>