force-app/main/default/objects/Contact/fields/Langue_de_communication__c.field-meta.xml
<CustomField>
    <fullName>Langue_de_communication__c</fullName>
    <label>Langue de communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Anglais</fullName>
            </value>
            <value>
                <fullName>Néerlandais</fullName>
            </value>
            <value>
                <fullName>Italien</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>