force-app/main/default/objects/Contact/fields/Numero_du_contact__c.field-meta.xml
<CustomField>
    <fullName>Numero_du_contact__c</fullName>
    <displayFormat>C-{00000}</displayFormat>
    <label>Numéro du contact</label>
    <type>AutoNumber</type>
</CustomField>