force-app/main/default/objects/Contact/fields/OPT_Out_email_3__c.field-meta.xml
<CustomField>
    <fullName>OPT_Out_email_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPT Out email 3</label>
    <type>Checkbox</type>
</CustomField>