force-app/main/default/objects/Contact/fields/OPT_Out_email_principal__c.field-meta.xml
<CustomField>
    <fullName>OPT_Out_email_principal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPT Out email principal</label>
    <type>Checkbox</type>
</CustomField>