force-app/main/default/objects/Contact/fields/Source_de_contact__c.field-meta.xml
<CustomField>
    <fullName>Source_de_contact__c</fullName>
    <label>Source de contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RPPS</fullName>
                <label>Bases externes (référentiel RPPS national)</label>
            </value>
            <value>
                <fullName>Site Internet</fullName>
            </value>
            <value>
                <fullName>Appel entrant</fullName>
            </value>
            <value>
                <fullName>Evenements Cerba HealthCare</fullName>
                <label>Evénements Cerba HealthCare</label>
            </value>
            <value>
                <fullName>Congres salons</fullName>
                <label>Congrès / salons</label>
            </value>
            <value>
                <fullName>SGLs</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Prospection personnelle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>