force-app/main/default/objects/Contact/fields/Specialite__c.field-meta.xml
<CustomField>
    <fullName>Specialite__c</fullName>
    <label>Spécialité médecine humaine</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Specialite</valueSetName>
    </valueSet>
</CustomField>