force-app/main/default/objects/Contact/fields/Specialite_medecine_veterinaire__c.field-meta.xml
<CustomField>
    <fullName>Specialite_medecine_veterinaire__c</fullName>
    <label>Spécialité médecine vétérinaire</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CEAV Chirurgie des animaux de compagnie</fullName>
            </value>
            <value>
                <fullName>CEAV Productions avicole et cunicole</fullName>
            </value>
            <value>
                <fullName>CEAV Santé &amp; Qualité production porcine</fullName>
            </value>
            <value>
                <fullName>CEAV Santé &amp; Qualité production laitière</fullName>
            </value>
            <value>
                <fullName>CEAV Sécurité / qualité des denrées alim</fullName>
            </value>
            <value>
                <fullName>CEAV Hygiène et technologie alimentaire</fullName>
            </value>
            <value>
                <fullName>CEAV Comportement animaux domestiques</fullName>
            </value>
            <value>
                <fullName>CEAV Médec. interne animaux de compagnie</fullName>
            </value>
            <value>
                <fullName>CEAV Médecine et chirurgie des équidés</fullName>
            </value>
            <value>
                <fullName>CEAV Pathologie Animale régions chaudes</fullName>
            </value>
            <value>
                <fullName>CEAV Santé publique vétérinaire</fullName>
            </value>
            <value>
                <fullName>CEAV Sciences &amp; Médecine Animaux de labo</fullName>
            </value>
            <value>
                <fullName>DESV Anatomie pathologique vétérinaire</fullName>
            </value>
            <value>
                <fullName>DESV Chirurgie des animaux de Compagnie</fullName>
            </value>
            <value>
                <fullName>DESV Dermatologie</fullName>
            </value>
            <value>
                <fullName>DESV Elevage et pathologie des équidés</fullName>
            </value>
            <value>
                <fullName>DESV Gestion de la santé des bovins</fullName>
            </value>
            <value>
                <fullName>DESV Médec. interne animaux de compagnie</fullName>
            </value>
            <value>
                <fullName>DESV Méd. interne animaux compa, cardio</fullName>
            </value>
            <value>
                <fullName>DESV Ophtalmologie</fullName>
            </value>
            <value>
                <fullName>DESV Productions animales régions chaudes</fullName>
            </value>
            <value>
                <fullName>DESV Médecine des animaux de laboratoire</fullName>
            </value>
            <value>
                <fullName>ECEIM Europ Col. Equine Intern. Medicine</fullName>
            </value>
            <value>
                <fullName>ECLAM Europ Col. Labo Animal Medicine</fullName>
            </value>
            <value>
                <fullName>ECVCP Europ Col. Vet Clinical Pathology</fullName>
            </value>
            <value>
                <fullName>ECVCN Europ Col. Vet Compara. Nutrition</fullName>
            </value>
            <value>
                <fullName>ECVD Europ Col. Veterinary Dermatology</fullName>
            </value>
            <value>
                <fullName>ECVDI Europ Col. Vet Diagnostic Imaging</fullName>
            </value>
            <value>
                <fullName>ECVIM Europ Col. Vet Intern. Medicine CA</fullName>
            </value>
            <value>
                <fullName>ECVIM Europ Col. Vet Int. Medici. Cardio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>