force-app/main/default/objects/Contact/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <defaultValue>&quot;En activité&quot;</defaultValue>
    <inlineHelpText>Un contact peut devenir inactif pour cause de retraite, cessation d&#39;exercice, décès, etc.</inlineHelpText>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En activité</fullName>
            </value>
            <value>
                <fullName>Inactif</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>