force-app/main/default/objects/Contact/fields/Statut_BE__c.field-meta.xml
<CustomField>
    <fullName>Statut_BE__c</fullName>
    <label>Statut Belgique</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Ancien client</fullName>
            </value>
            <value>
                <fullName>Desactive</fullName>
                <isActive>false</isActive>
                <label>Désactivé</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>