force-app/main/default/objects/Contact/fields/Telephone_fixe__c.field-meta.xml
<CustomField>
    <fullName>Telephone_fixe__c</fullName>
    <label>Téléphone fixe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>