force-app/main/default/objects/Contact/fields/Titre_d_exercice__c.field-meta.xml
<CustomField>
    <fullName>Titre_d_exercice__c</fullName>
    <inlineHelpText>Nom modifiable si la source du contact est &quot;RPPS&quot;</inlineHelpText>
    <label>Titre d&#39;exercice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Titre_d_exercice</valueSetName>
    </valueSet>
</CustomField>