force-app/main/default/objects/Contact/fields/Type_d_identifiant__c.field-meta.xml
<CustomField>
    <fullName>Type_d_identifiant__c</fullName>
    <inlineHelpText>Non modifiable si la source du contact est &quot;RPPS&quot;</inlineHelpText>
    <label>Type d&#39;identifiant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_d_identifiant</valueSetName>
    </valueSet>
</CustomField>