force-app/main/default/objects/Contact/fields/Ville_du_compte__c.field-meta.xml
<CustomField>
    <fullName>Ville_du_compte__c</fullName>
    <formula>Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ville du compte</label>
    <type>Text</type>
</CustomField>