force-app/main/default/objects/Contact/validationRules/VR_Contact_Fonction_obligatoire.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact_Fonction_obligatoire</fullName>
    <active>true</active>
    <description>Fonction/rôle administratif ou Fonction/rôle médical obligatoire</description>
    <errorConditionFormula>AND (
 $User.Tech_By_Pass_VR__c = false,
ISBLANK( 

TEXT (Fonction_Role_administratif__c)) &amp;&amp; ISBLANK( 

TEXT(Fonction_Role_medical__c)))</errorConditionFormula>
    <errorMessage>Merci de renseigner le rôle administratif ou le rôle médical de ce contact.</errorMessage>
</ValidationRule>