force-app/main/default/objects/Contact/validationRules/VR_Contact_inactif_non_modifiable.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Contact_inactif_non_modifiable</fullName>
    <active>true</active>
    <description>Un contact inactif ne peut plus être modifié sauf par l&#39;admin fonctionnel
Exception faite pour les utilisateurs qui ont la CAC Tech By Pass de cochée sur leur fiche utilisateur.</description>
    <errorConditionFormula>AND( 
$User.Tech_By_Pass_VR__c = false,  
NOT(ISCHANGED(Statut__c)),
NOT(ISNEW()),
ISPICKVAL(Statut__c, &quot;Inactif&quot;),
LastModifiedDate &lt;&gt;NOW(),
$User.ProfileId &lt;&gt; &quot;00e1t000000ufJS&quot;


)</errorConditionFormula>
    <errorMessage>Merci de ne plus modifier ce contact car son statut est &quot;Inactif&quot;.</errorMessage>
</ValidationRule>