force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Specialite__c</columns>
    <columns>Fonction_Role_administratif__c</columns>
    <columns>Fonction_Role_medical__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CA_consolide__c</columns>
    <filterScope>Mine</filterScope>
    <label>Mes contacts</label>
</ListView>