force-app/main/default/objects/Contact/listViews/Tous_les_Contacts.listView-meta.xml
<ListView>
    <fullName>Tous_les_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Icone_source__c</columns>
    <columns>Specialite__c</columns>
    <columns>Fonction_Role_administratif__c</columns>
    <columns>Fonction_Role_medical__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.REPORTS_TO.NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Source_de_donnees__c</columns>
    <columns>Source_de_contact__c</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>equals</operation>
        <value>1/30/2023 12:00 AM</value>
    </filters>
    <label>Tous les Contacts</label>
</ListView>